// Grasscutter - A server software reimplementation for a certain anime game.
// Copyright (C) 2022  Grasscutter Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message AnnounceData {
	string count_down_text = 9;
	string center_system_text = 8;
	uint32 count_down_frequency = 1;
	uint32 config_id = 7;
	uint32 begin_time = 4;
	uint32 center_system_frequency = 11;
	string dungeon_confirm_text = 2;
	bool is_center_system_last_5_every_minutes = 14;
	uint32 end_time = 10;
}
