syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message ParentQuestRandomInfo {
	uint32 entrance_id = 1;
	uint32 template_id = 2;
	repeated uint32 factor_list = 3;
}
